backend API added and Redux state management used to modify the products page

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,11 @@
 /.pnp
 .pnp.js
 
+#frontend folder and backend together with the virtual environment
+/myenv
+/frontend
+/backend
+
 # testing
 /coverage
 
